--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Practicum Project",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf public && webpack",
+    "build": "rm -rf dist && webpack",
     "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
