--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Practicum Project",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack",
+    "build": "rimraf -rf docs && webpack",
     "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
@@ -37,7 +37,6 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "corejs": "^1.0.0"
+    "core-js": "^3.6.5"
   }
 }
